Completed my personal portfolio using the option 1 wireframe.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,76 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Jack Orth</title>
+    <link rel="stylesheet" href="style/index.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+<header>
+    <h1>Jack Orth</h1>
+    <div class="bar">
+        <nav>
+            <a href="#top" target="_blank">Home</a>
+            <a href="about.html" target="_blank">About</a>
+            <a href="contact.html" target="_blank">Contact</a>
+            <a href="projects.html" target="_blank">Projects</a>
+        </nav>
+    </div>
+</header>
+<section id="top">
+    <div class="image1">
+        <img id="img1" src="https://i.picsum.photos/id/1044/4032/2268.jpg?hmac=BXmoMkaurlzpTLYQupXLipcmI1sFbgT5sIz98Ob5VZE" alt="Man in mountains">
+    </div>
+    <div class="text1">
+        <h2>Jack Orth</h2>
+        <button onclick=location.href="projects.html">My Projects</button>
+        <p>Hi there, I'm Jack. Welcome to my portfolio. I am excited about jumping into the world of web development because it forces you to think in a completely different way, and the options it gives you are endless. </p>
+    </div>
+</section>
+<section class="firstRow">
+        <div class="image">
+         <img src="https://images.unsplash.com/photo-1576683098320-e81d7687c4f4?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1203&q=80" alt="Union">
+        <p>My favorite place in <br>Denver!</p> 
+        </div>
+        <div class="image">
+         <img src="https://images.unsplash.com/photo-1531834486615-2aef2d365673?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Denmark">
+         <p>I'm also Danish!</p> 
+        </div>
+        <div class="image">
+          <img src="https://images.unsplash.com/photo-1503257677139-da10732a6911?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1339&q=80" alt="Hiking">
+          <p>My favorite activity <br> is hiking!</p> 
+        </div>
+        <div class="image">
+         <img src="https://images.unsplash.com/photo-1536623975707-c4b3b2af565d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Meditation">
+         <p>I'm also interested in <br>meditation.</p> 
+        </div>
+</section>
+<section class="secondRow">
+    <div class="image">
+        <img src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Coding">
+       <p>I'm currently a student<br> at Lambda School.</p> 
+       </div>
+       <div class="image">
+        <img src="https://images.unsplash.com/photo-1516979187457-637abb4f9353?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Reading">
+        <p>I love to read.</p> 
+       </div>
+       <div class="image">
+         <img src="https://images.unsplash.com/photo-1590084928446-8932af7f7037?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1267&q=80" alt="Weights">
+         <p>I <b>try</b> to work out<br>every day</p> 
+       </div>
+       <div class="image">
+        <img src="https://images.unsplash.com/photo-1514214246283-d427a95c5d2f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1273&q=80" alt="Miami">
+        <p>My favorite city is <br> Miami!</p> 
+       </div>
+</section>
+<footer>
+    <h3>Like what you see?</h3>
+    <button onclick=location.href="contact.html">Contact Me</button>
+    <nav class="bottom">
+        <a href="https://twitter.com/JackAOrth" target="_blank">Check out my Twitter here!</a>
+        <a href="https://www.linkedin.com/in/jack-orth-478691147/" target="_blank">Check out my LinkedIn here!</a>
+    </nav>
+</footer>
 </body>
 </html>
