Introduced max-width media queries at 800px and 500px and added accessability features by switching divs to sections when necessary.

--- a/index.html
+++ b/index.html
@@ -11,24 +11,24 @@
 <body>
 <header>
     <h1>Jack Orth</h1>
-    <div class="bar">
+    <section class="bar">
         <nav>
             <a href="#top" target="_blank">Home</a>
             <a href="about.html" target="_blank">About</a>
             <a href="contact.html" target="_blank">Contact</a>
             <a href="projects.html" target="_blank">Projects</a>
         </nav>
-    </div>
+    </section>
 </header>
 <section id="top">
-    <div class="image1">
+    <section class="image1">
         <img id="img1" src="https://i.picsum.photos/id/1044/4032/2268.jpg?hmac=BXmoMkaurlzpTLYQupXLipcmI1sFbgT5sIz98Ob5VZE" alt="Man in mountains">
-    </div>
-    <div class="text1">
+    </section>
+    <section class="text1">
         <h2>Jack Orth</h2>
         <button onclick=location.href="projects.html">My Projects</button>
         <p>Hi there, I'm Jack. Welcome to my portfolio. I am excited about jumping into the world of web development because it forces you to think in a completely different way, and the options it gives you are endless. </p>
-    </div>
+    </section>
 </section>
 <section class="firstRow">
         <div class="image">
